Fixed Navigation Spacing

--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -26,6 +26,7 @@
 		font-weight: 300;
 		text-align: center;
 		padding: .6em;
+		padding-top: em(12px);
 		letter-spacing: em(2.5px);
 
 		button {
@@ -65,7 +66,7 @@
 
 		&__item {
 			border-bottom-color:transparent;
-			font-size: 0.8em;
+			font-size: 0.7em;
 		    padding-bottom: 0;
 
    			button {
